--- a/index.html
+++ b/index.html
@@ -61,6 +61,180 @@
                 </li>
             </ul>
         </div>
+        <!-- Main -->
+        <div class="main">
+            <div class="topbar">
+                <div class="toggle">
+                    <ion-icon name="menu-outline"></ion-icon>
+                </div>
+                <!-- search -->
+                <div class="search">
+                    <label>
+                        <input type="text" placeholder="search here" >
+                        <ion-icon name="search-outline"></ion-icon>
+                    </label>
+                </div>
+                <!-- user -->
+                <div class="user">
+                    <img src="image/user/Layer 2 copy.png" alt="">
+                </div>
+        </div>
+        <!-- cards -->
+        <div class="cardBox">
+            <div class="card">
+                <div>
+                    <div class="numbers">1,504</div>
+                    <div class="CardName">Daily Veiws</div>
+                </div>
+                <div class="iconBox">
+                    <ion-icon name="eye-outline"></ion-icon>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <div class="numbers">88</div>
+                    <div class="CardName">Sales</div>
+                </div>
+                <div class="iconBox">
+                    <ion-icon name="cart-outline"></ion-icon>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <div class="numbers">284</div>
+                    <div class="CardName">Comment</div>
+                </div>
+                <div class="iconBox">
+                    <ion-icon name="chatbubbles-outline"></ion-icon>
+                </div>
+            </div>
+            <div class="card">
+                <div>
+                    <div class="numbers">$7,586</div>
+                    <div class="CardName">Earning</div>
+                </div>
+                <div class="iconBox">
+                    <ion-icon name="cash-outline"></ion-icon>
+                </div>
+            </div>
+        </div>
+        <!-- details list -->
+        <div class="details">
+            <div class="recentOrders">
+                <div class="cardHeader">
+                    <h2>Recent Orders</h2>
+                    <a href="#" class="btn">Veiw All</a>
+                </div>
+                <table>
+                    <thead>
+                        <tr>
+                        <td>Name</td>
+                        <td>Price</td>
+                        <td>Payment</td>
+                        <td>Status</td>
+                    </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Star refrigerator</td>
+                            <td>$1200</td>
+                            <td>Paid</td>
+                            <td><span class="Status delivered">Delivered</span></td>
+                        </tr>
+                        <tr>
+                            <td>Star refrigerator</td>
+                            <td>$1200</td>
+                            <td>Paid</td>
+                            <td><span class="Status delivered">Delivered</span></td>
+                        </tr>
+                        <tr>
+                            <td>Star refrigerator</td>
+                            <td>$1200</td>
+                            <td>Paid</td>
+                            <td><span class="Status delivered">Delivered</span></td>
+                        </tr>
+                        <tr>
+                            <td>Star refrigerator</td>
+                            <td>$1200</td>
+                            <td>Paid</td>
+                            <td><span class="Status delivered">Delivered</span></td>
+                        </tr>
+                        <tr>
+                            <td>Star refrigerator</td>
+                            <td>$1200</td>
+                            <td>Paid</td>
+                            <td><span class="Status delivered">Delivered</span></td>
+                        </tr>
+                        <tr>
+                            <td>Star refrigerator</td>
+                            <td>$1200</td>
+                            <td>Paid</td>
+                            <td><span class="Status delivered">Delivered</span></td>
+                        </tr>
+                        <tr>
+                            <td>Star refrigerator</td>
+                            <td>$1200</td>
+                            <td>Paid</td>
+                            <td><span class="Status delivered">Delivered</span></td>
+                        </tr>
+                        <tr>
+                            <td>Star refrigerator</td>
+                            <td>$1200</td>
+                            <td>Paid</td>
+                            <td><span class="Status delivered">Delivered</span></td>
+                        </tr>
+                        <tr>
+                            <td>Star refrigerator</td>
+                            <td>$1200</td>
+                            <td>Paid</td>
+                            <td><span class="Status delivered">Delivered</span></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!--new customer  -->
+            <div class="recentCustomers">
+                <div class="cardHeader">
+                    <h2>Recent Customers</h2>
+                </div>
+                <table>
+                    <tr>
+                        <td width="60px"><div class="imgbx"><img src="./image/user/recent-customer/img1.jpg" alt=""></div></td>
+                        <td><h4>David<br><span>Italy</span></h4></td>
+                    </tr>
+                    <tr>
+                        <td width="60px"><div class="imgbx"><img src="./image/user/recent-customer/img2.jpg" alt=""></div></td>
+                        <td><h4>Tabish<br><span>Italy</span></h4></td>
+                        
+                    </tr>
+                    <tr>
+                        <td width="60px"><div class="imgbx"><img src="./image/user/recent-customer/img3.jpg" alt=""></div></td>
+                        <td><h4>David<br><span>Italy</span></h4></td>
+                    </tr>
+                    <tr>
+                        <td width="60px"><div class="imgbx"><img src="./image/user/recent-customer/img4.jpg" alt=""></div></td>
+                        <td><h4>David<br><span>Italy</span></h4></td>
+                    </tr>
+                    <tr>
+                        <td width="60px"><div class="imgbx"><img src="./image/user/recent-customer/img5.jpg" alt=""></div></td>
+                        <td><h4>David<br><span>Italy</span></h4></td>
+                    </tr>
+                    <tr>
+                        <td width="60px"><div class="imgbx"><img src="./image/user/recent-customer/img6.jpg" alt=""></div></td>
+                        <td><h4>David<br><span>Italy</span></h4></td>
+                    </tr>
+                    <tr>
+                        <td width="60px"><div class="imgbx"><img src="./image/user/recent-customer/img7.jpg" alt=""></div></td>
+                        <td><h4>David<br><span>Italy</span></h4></td>
+                    </tr>
+                    <tr>
+                        <td width="60px"><div class="imgbx"><img src="./image/user/recent-customer/img8.jpg" alt=""></div></td>
+                        <td><h4>David<br><span>Italy</span></h4></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
